--- a/GithubActions/Deployment.yml
+++ b/GithubActions/Deployment.yml
@@ -24,17 +24,17 @@ spec:
     spec:
       containers:
       - name: dotnet-con
-        image: 542833615945.dkr.ecr.ap-south-1.amazonaws.com/ecr/nopcommerce
+        image: 542833615945.dkr.ecr.ap-south-1.amazonaws.com/dotnet/nop
         ports:
         - containerPort: 5000
           protocol: TCP
  
-        # ✅ Important: make sure ASP.NET binds correctly
+        # ✅ Ensures ASP.NET Core listens on all interfaces (not just localhost)
         env:
         - name: ASPNETCORE_URLS
           value: "http://+:5000"
  
-        # ✅ Startup Probe (gives app time to boot up)
+        # ✅ Startup probe allows time for app initialization before other probes start
         startupProbe:
           httpGet:
             path: /
@@ -43,7 +43,7 @@ spec:
           periodSeconds: 10         # check every 10 sec
           failureThreshold: 10      # allow up to 100 sec startup
  
-        # ✅ Readiness Probe (traffic only after it's ready)
+        # ✅ Readiness probe ensures traffic is sent only after the app is healthy
         readinessProbe:
           httpGet:
             path: /
@@ -52,7 +52,7 @@ spec:
           periodSeconds: 10
           failureThreshold: 3
  
-        # ✅ Liveness Probe (restarts app if hung)
+        # ✅ Liveness probe restarts the container if the app becomes unresponsive
         livenessProbe:
           httpGet:
             path: /
@@ -61,11 +61,12 @@ spec:
           periodSeconds: 20
           failureThreshold: 3
  
-        # ✅ Resource tuning for t2.medium (2 vCPU, 4GB)
+        # ✅ Resource tuning (optimized for light workloads on t2.medium — ~1 vCPU, ~1GB RAM)
         resources:
           requests:
-            cpu: "800m"
-            memory: "1500Mi"
+            cpu: "400m"
+            memory: "800Mi"
           limits:
-            cpu: "1800m"
-            memory: "1800Mi"
+            cpu: "900m"
+            memory: "900Mi"
+
