--- a/GithubActions/ecr-trivy.yml
+++ b/GithubActions/ecr-trivy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.100'
-      - name: SonarCloud Scan
+      - name: SonarCloud Scan 
         uses: SonarSource/sonarcloud-github-action@v3
  
         with:
@@ -33,36 +33,36 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with: 
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-seceret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-      - name: Login to amazon ecr
+      - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         # build and push docker image
       - name: Build Docker image
         env:
           ECR_REGISTRY: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 542833615945.dkr.ecr.ap-south-1.amazonaws.com
-          ECR_REPOSITORY: ecr/nopcommerce
+          ECR_REPOSITORY: dotnet/nop
           IMAGE_TAG: latest
         run: |
-          docker build -t ecr/nopcommerce .
-          docker tag ecr/nopcommerce:latest 542833615945.dkr.ecr.ap-south-1.amazonaws.com/ecr/nopcommerce:latest
-          docker push 542833615945.dkr.ecr.ap-south-1.amazonaws.com/ecr/nopcommerce:latest
+          docker build -t dotnet/nop .
+          docker tag dotnet/nop:latest 542833615945.dkr.ecr.ap-south-1.amazonaws.com/dotnet/nop:latest
+          docker push 542833615945.dkr.ecr.ap-south-1.amazonaws.com/dotnet/nop:latest
 
 
-      #   name: Scan image with Trivy
-      #   uses: aquasecurity/trivy-action@0.20.0
-      #   with:
-      #   image-ref: 'dev/nop:latest'
-      #   format: 'table'
-      #   severity: 'HIGH,CRITICAL'
-      #   ignore-unfixed: true
+
+      - name: Scan image with Trivy
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: 'dotnet/nop:latest'
+          format: 'table'
+          severity: 'HIGH,CRITICAL'
+          ignore-unfixed: true
       # - name: Update kubeconfig for EKS
-      #   run: aws eks update-kubeconfig --name my-cluster --region ap-south-1
- 
+      #     run: aws eks update-kubeconfig --name my-cluster --region ap-south-1
+  
       # - name: Deploy to EKS
-      #   run: |
-      #    kubectl apply -f manifests/
-      #    kubectl get pods
-      #    kubectl get all
-          
+      #     run: |
+      #     kubectl apply -f manifests/
+      #     kubectl get pods
+      #     kubectl get all
